[gd_scene load_steps=17 format=3 uid="uid://bj61jhrq7i7u1"]

[ext_resource type="Script" path="res://Scripts/Interactables/NPCTab.gd" id="1_b3n58"]
[ext_resource type="Texture2D" uid="uid://dahmg5t0k8ka1" path="res://Art/Characters/player.png" id="2_doxdg"]
[ext_resource type="PackedScene" uid="uid://dgx4d5ogv1yi8" path="res://Scenes/UI/Dialogue.tscn" id="3_bjrrm"]
[ext_resource type="Script" path="res://Scripts/Interactables/TrainerTab.gd" id="4_bp487"]
[ext_resource type="Script" path="res://Scripts/Interactables/UpgradeUI.gd" id="5_37a45"]
[ext_resource type="PackedScene" uid="uid://brm8k3e0qaxpp" path="res://Scenes/Interactables/RecyclerButton.tscn" id="6_bpgnt"]
[ext_resource type="Texture2D" uid="uid://b4w3dtepsdun8" path="res://Art/Objects/coin_pouch.png" id="7_v5uso"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4s4x0"]
atlas = ExtResource("2_doxdg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_st52e"]
atlas = ExtResource("2_doxdg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcx5a"]
atlas = ExtResource("2_doxdg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u14k2"]
atlas = ExtResource("2_doxdg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0ys1"]
atlas = ExtResource("2_doxdg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d70ki"]
atlas = ExtResource("2_doxdg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_djakc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s4x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st52e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcx5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u14k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0ys1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d70ki")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1b4h"]
size = Vector2(8, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_4io8b"]
radius = 31.0161

[node name="NPC" type="CharacterBody2D"]
position = Vector2(561, 218)
script = ExtResource("1_b3n58")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_djakc")
frame_progress = 0.05488

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 12)
shape = SubResource("RectangleShape2D_p1b4h")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_4io8b")

[node name="Dialogue" parent="." instance=ExtResource("3_bjrrm")]
z_index = 1
offset_left = -56.0
offset_top = -48.0
offset_right = -56.0
offset_bottom = -48.0

[node name="RichTextLabel" parent="Dialogue/NinePatchRect" index="0"]
offset_right = 97.0
text = "Trainer"

[node name="RichTextLabel2" parent="Dialogue/NinePatchRect" index="1"]
text = "Come train here.
"

[node name="Label" type="Label" parent="."]
offset_left = 15.0
offset_top = 5.0
offset_right = 89.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
text = "F to speak"

[node name="Tab" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_bp487")

[node name="UpgradeUI" type="Control" parent="Tab"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -112.0
offset_top = -56.0
offset_right = -72.0
offset_bottom = -16.0
scale = Vector2(0.569697, 0.569697)
script = ExtResource("5_37a45")

[node name="UpgradePanel" type="Panel" parent="Tab/UpgradeUI"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 200.0

[node name="UpgradeLabel" type="Label" parent="Tab/UpgradeUI/UpgradePanel"]
layout_mode = 0
offset_left = 56.1702
offset_top = 14.0426
offset_right = 121.17
offset_bottom = 37.0426
text = "Trainer"

[node name="CoinImage" type="TextureRect" parent="Tab/UpgradeUI/UpgradePanel"]
layout_mode = 0
offset_left = 307.181
offset_top = 5.26595
offset_right = 1507.18
offset_bottom = 1187.27
scale = Vector2(0.0260892, 0.0260892)
texture = ExtResource("7_v5uso")

[node name="CoinLabel" type="Label" parent="Tab/UpgradeUI/UpgradePanel"]
layout_mode = 0
offset_left = 344.0
offset_top = 13.266
offset_right = 384.0
offset_bottom = 36.266
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="Tab/UpgradeUI/UpgradePanel"]
layout_mode = 2
offset_top = 56.1702
offset_right = 433.0
offset_bottom = 96.1702

[node name="UpgradeGrid" type="GridContainer" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 91
columns = 5

[node name="UpgradeButton" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid" instance=ExtResource("6_bpgnt")]
layout_mode = 2
texture_normal = null

[node name="UpgradeButton2" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid" instance=ExtResource("6_bpgnt")]
layout_mode = 2
texture_normal = null

[node name="UpgradeButton3" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid" instance=ExtResource("6_bpgnt")]
layout_mode = 2
texture_normal = null

[node name="CenterContainer2" type="CenterContainer" parent="Tab/UpgradeUI/UpgradePanel"]
layout_mode = 2
offset_top = 126.383
offset_right = 400.0
offset_bottom = 166.383

[node name="UpgradeGrid2" type="GridContainer" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 92
columns = 5

[node name="UpgradeButton" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2" instance=ExtResource("6_bpgnt")]
layout_mode = 2
texture_normal = null

[node name="UpgradeButton2" parent="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2" instance=ExtResource("6_bpgnt")]
layout_mode = 2
texture_normal = null

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="CLICKED" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton" to="Tab" method="_on_upgrade_button_clicked"]
[connection signal="mouse_entered" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton" method="_on_mouse_exited"]
[connection signal="CLICKED" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton2" to="Tab" method="_on_upgrade_button_clicked"]
[connection signal="mouse_entered" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton2" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton2" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton2" method="_on_mouse_exited"]
[connection signal="CLICKED" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton3" to="Tab" method="_on_upgrade_button_clicked"]
[connection signal="mouse_entered" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton3" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton3" to="Tab/UpgradeUI/UpgradePanel/CenterContainer/UpgradeGrid/UpgradeButton3" method="_on_mouse_exited"]
[connection signal="CLICKED" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton" to="Tab" method="_on_upgrade_button_clicked"]
[connection signal="mouse_entered" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton" to="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton" to="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton" method="_on_mouse_exited"]
[connection signal="CLICKED" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton2" to="Tab" method="_on_upgrade_button_clicked"]
[connection signal="mouse_entered" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton2" to="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton2" to="Tab/UpgradeUI/UpgradePanel/CenterContainer2/UpgradeGrid2/UpgradeButton2" method="_on_mouse_exited"]

[editable path="Dialogue"]
